# wizard-editor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  plan.md
crates/app/: Cargo.toml
crates/app/src/: audio_mixer.rs  channel_polling.rs  constants.rs  debug_log.rs  import.rs  lib.rs  main.rs  pipeline.rs  playback.rs  playback_engine.rs  texture_cache.rs
crates/app/src/playback_engine/: forward.rs  mod.rs  reverse.rs  rewind_cache.rs  scrub.rs
crates/app/src/workers/: audio_worker.rs  keyboard.rs  mod.rs  preview_worker.rs  scrub_cache_worker.rs  video_decode_worker.rs
crates/audio/: Cargo.toml
crates/audio/src/: output.rs
crates/media/: Cargo.toml
crates/media/src/: audio.rs  decode.rs  decoder.rs  gst_audio_decoder.rs  gst_forward.rs  gst_frame_decoder.rs  gst_init.rs  gst_pipeline.rs  gst_reverse.rs  import.rs  lib.rs  metadata.rs  pipeline.rs  thumbnail.rs  waveform.rs
crates/state/: Cargo.toml
crates/state/src/: clip.rs  lib.rs  playback.rs  project.rs  selection.rs  tag.rs  timeline.rs  undo.rs
crates/ui/: Cargo.toml
crates/ui/src/: browser.rs  constants.rs  inspector.rs  lib.rs  preview.rs  theme.rs  timeline.rs  waveform_gpu.rs
crates/ui/src/timeline/: interaction.rs  layout.rs  mod.rs  rendering.rs
crates/ui/src/widgets/: mod.rs  playhead.rs  thumbnail.rs  waveform.rs
