[workspace]
members = [
    "crates/app",
    "crates/state",
    "crates/ui",
    "crates/media",
    "crates/audio",
]
resolver = "2"

[workspace.dependencies]
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
egui_extras = { version = "0.31", features = ["image"] }
image = "0.25"
cpal = "0.15"
rfd = "0.15"
bytemuck = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-the-third = "4"
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"
ringbuf = "0.4"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

wizard-state = { path = "crates/state" }
wizard-ui = { path = "crates/ui" }
wizard-media = { path = "crates/media" }
wizard-audio = { path = "crates/audio" }
