[package]
name = "wizard-media"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ffmpeg-the-third = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }
ringbuf = { workspace = true }
